better lock screen

--- a/albert/albert.conf
+++ b/albert/albert.conf
@@ -1,6 +1,6 @@
 [General]
 hotkey=Meta+D
-last_report=1512119679
+last_report=1513272240
 showTray=true
 standsalone_note_shown=true
 
@@ -21,7 +21,7 @@ enabled=false
 
 [org.albert.extension.system]
 enabled=true
-lock=i3lock-fancy
+lock=~/.config/i3/betterlockscreen
 reboot=reboot now
 shutdown=shutdown now
 
