--- a/albert/albert.conf
+++ b/albert/albert.conf
@@ -1,6 +1,6 @@
 [General]
 hotkey=Meta+D
-last_report=1513272240
+last_report=1525331547
 showTray=true
 standsalone_note_shown=true
 
@@ -21,7 +21,7 @@ enabled=false
 
 [org.albert.extension.system]
 enabled=true
-lock=~/.config/i3/betterlockscreen
+lock=betterlockscreen -l
 reboot=reboot now
 shutdown=shutdown now
 
