--- a/albert/albert.conf
+++ b/albert/albert.conf
@@ -1,7 +1,8 @@
 [General]
+frontendId=org.albert.frontend.boxmodel.qml
 hotkey=Meta+D
 last_report=1531519205
-showTray=true
+showTray=false
 standsalone_note_shown=true
 
 [org.albert.extension.applications]
@@ -11,6 +12,9 @@ enabled=true
 enabled=true
 
 [org.albert.extension.files]
+enabled=true
+
+[org.albert.extension.mpris]
 enabled=true
 
 [org.albert.extension.python]
@@ -31,14 +35,23 @@ enabled=true
 [org.albert.extension.websearch]
 enabled=true
 
+[org.albert.frontend.boxmodel.qml]
+alwaysOnTop=true
+clearOnHide=false
+hideOnClose=false
+hideOnFocusLoss=true
+showCentered=true
+stylePath=/usr/share/albert/org.albert.frontend.boxmodel.qml/styles/BoxModel/MainComponent.qml
+windowPosition=@Point(655 283)
+
 [org.albert.frontend.boxmodel.widgets]
 alwaysOnTop=true
 clearOnHide=false
 displayIcons=true
 displayScrollbar=false
 displayShadow=true
-hideOnClose=false
+hideOnClose=true
 hideOnFocusLoss=true
 itemCount=5
 showCentered=true
-theme=Dark
+theme=Yosemite Dark
