--- a/i3/config
+++ b/i3/config
@@ -105,11 +105,10 @@ bindsym XF86AudioMute exec --no-startup-id amixer -q sset Master toggle
 bindsym XF86MonBrightnessUp exec light -A 10 # increase screen brightness
 bindsym XF86MonBrightnessDown exec light -U 10 # increase screen brightness
 
-new_window pixel 0
+new_window pixel 3
 
-gaps inner 15
+gaps inner 10
 gaps outer 3
-hide_edge_borders both
 
 set $ws1 "1: term"
 set $ws2 "2: dev"
@@ -168,7 +167,7 @@ set_from_resource	$color15	color15
 
 client.background	$background
 
-client.focused         	$foreground	$background	$foreground	$color4		$color4	
+client.focused         	$foreground	$background	$foreground	$color0		$color0	
 client.unfocused       	$foreground	$background	$foreground	$background	$background
 client.focused_inactive	$foreground	$background	$foreground	$background	$background
 client.urgent		$foreground	$background	$foreground	$background	$background
@@ -215,10 +214,10 @@ bar {
 	colors {
 		background $background
 		statusline $color6
-		separator  $color6
+		separator  $color14
 
-		focused_workspace	$background	$background	$color6
-		active_workspace	$background	$background	$color6
+		focused_workspace	$color0 $color0 $color6
+		active_workspace	$color0 $color0 $color6
 		inactive_workspace	$background	$background	$color14
 		urgent_workspace	$background	$background	$color19  
 
