vimrc and others

--- a/albert/albert.conf
+++ b/albert/albert.conf
@@ -1,7 +1,7 @@
 [General]
 frontendId=org.albert.frontend.boxmodel.qml
 hotkey=Meta+D
-last_report=1531648646
+last_report=1533112005
 showTray=false
 standsalone_note_shown=true
 
@@ -33,7 +33,7 @@ shutdown=shutdown now
 enabled=true
 
 [org.albert.extension.websearch]
-enabled=true
+enabled=false
 
 [org.albert.frontend.boxmodel.qml]
 alwaysOnTop=true
