--- a/i3/config
+++ b/i3/config
@@ -143,7 +143,7 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 
 exec --no-startup-id nm-applet
-exec --no-startup-id feh --bg-scale /home/vkolobara/Pictures/python.jpg
+exec --no-startup-id feh --bg-scale /home/vkolobara/Pictures/arch.jpg
 
 # Colors set from ~/.Xresources
 set_from_resource	$background	background
@@ -203,6 +203,16 @@ mode "resize" {
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
+
+mode "move" {
+    bindsym k move up 20px
+    bindsym h move left 20px
+    bindsym j move down 20px
+    bindsym l move right 20px
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+bindsym $mod+m focus floating; mode "move"
 
 bindsym $mod+r mode "resize"
 
