changed theme, added compton

--- a/albert/albert.conf
+++ b/albert/albert.conf
@@ -1,7 +1,7 @@
 [General]
 frontendId=org.albert.frontend.boxmodel.qml
 hotkey=Meta+D
-last_report=1533112005
+last_report=1533285710
 showTray=false
 standsalone_note_shown=true
 
@@ -25,7 +25,7 @@ enabled=false
 
 [org.albert.extension.system]
 enabled=true
-lock=betterlockscreen -l
+lock=betterlockscreen -l blur
 reboot=reboot now
 shutdown=shutdown now
 
