xmodmap to i3 startup

--- a/i3/config
+++ b/i3/config
@@ -145,6 +145,7 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 exec --no-startup-id nm-applet
 exec --no-startup-id feh --bg-scale /home/vkolobara/Pictures/arch.jpg
 exec_always compton
+exec_always xmodmap ~/.Xmodmap
 
 # Colors set from ~/.Xresources
 set_from_resource	$background	background
