--- a/albert/albert.conf
+++ b/albert/albert.conf
@@ -1,9 +1,10 @@
 [General]
-frontendId=org.albert.frontend.boxmodel.qml
+frontendId=org.albert.frontend.qmlboxmodel
 hotkey=Meta+D
 last_report=1533652652
 showTray=false
 standsalone_note_shown=true
+terminal=urxvt -e
 
 [org.albert.extension.applications]
 enabled=true
@@ -41,7 +42,7 @@ clearOnHide=false
 hideOnClose=false
 hideOnFocusLoss=true
 showCentered=true
-stylePath=/usr/share/albert/org.albert.frontend.boxmodel.qml/styles/BoxModel/MainComponent.qml
+stylePath=/usr/share/albert/org.albert.frontend.qmlboxmodel/styles/BoxModel/MainComponent.qml
 windowPosition=@Point(655 283)
 
 [org.albert.frontend.boxmodel.widgets]
@@ -55,3 +56,24 @@ hideOnFocusLoss=true
 itemCount=5
 showCentered=true
 theme=Yosemite Dark
+
+[org.albert.frontend.qmlboxmodel]
+alwaysOnTop=true
+clearOnHide=false
+hideOnClose=false
+hideOnFocusLoss=true
+showCentered=true
+stylePath=/usr/share/albert/org.albert.frontend.qmlboxmodel/styles/BoxModel/MainComponent.qml
+windowPosition=@Point(129 13)
+
+[org.albert.frontend.widgetboxmodel]
+alwaysOnTop=true
+clearOnHide=false
+displayIcons=true
+displayScrollbar=false
+displayShadow=true
+hideOnClose=false
+hideOnFocusLoss=true
+itemCount=5
+showCentered=true
+theme=Dark
