--- a/compton.conf
+++ b/compton.conf
@@ -1,14 +1,14 @@
 shadow = true;
 no-dnd-shadow = true;
-no-dock-shadow = true;
+no-dock-shadow = false;
 clear-shadow = true;
 shadow-radius = 7;
 shadow-offset-x = -7;
 shadow-offset-y = -7;
 shadow-exclude = [ "name = 'Notification'", "class_g = 'Conky'", "class_g ?= 'Notify-osd'", "class_g = 'Cairo-clock'", "_GTK_FRAME_EXTENTS@:c" ];
-menu-opacity = 0.0;
-inactive-opacity = 0.0;
-frame-opacity = 0.0;
+menu-opacity = 1.0;
+inactive-opacity = 1.0;
+frame-opacity = 1.0;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 blur-kern = "3x3box";
@@ -44,3 +44,4 @@ wintypes :
 };
 blur-background = false;
 inactive-dim = 0.0;
+active-opacity = 1.0;
