--- a/i3/config
+++ b/i3/config
@@ -37,9 +37,9 @@ bindsym $mod+Shift+Return exec urxvt -cd $(xcwd)
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-# bindsym $mod+d exec rofi -show run
-exec --no-startup-id albert
-bindsym $mod+d exec --no-startup-id albert show
+bindsym $mod+d exec rofi -show run
+#exec --no-startup-id albert
+#bindsym $mod+d exec --no-startup-id albert show
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
